<resources>
    <string name="app_name">CalendarApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_adding">Adding event</string>
    <string name="title_activity_removing">Removing event</string>
    <string name="title_activity_searching">Searching for events</string>
    <string name="title_activity_viewing">Viewing events</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="event_title">Event Title</string>
    <string name="login">login</string>
</resources>
