<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:clickable="true"
    android:focusableInTouchMode="true"

    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/calender_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:gravity="center_horizontal|bottom"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/calendar_icon"
        android:contentDescription="@string/calendar_icon" />

    <EditText
        android:id="@+id/username"
        android:autofillHints="username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"

        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:autofillHints="@string/error_incorrect_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"

        android:textSize="20sp" />


    <Button
        android:id="@+id/loginButton2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"

        android:text="@string/login"
        android:background="@drawable/button_bg"
        android:state_pressed="true"

        />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="10sp"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"

        android:text="New user? Sign up!"
        android:background="@android:color/transparent"
        android:onClick="signup"

        />


</LinearLayout>